[tool.poetry]
name = "src"
version = "0.1.0"
description = "a minimalist dungeon crawler"
authors = ["AntoniaLivia79 <antoniablanchflower@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
pygame = "^2.5.2"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
