[tool.knightquest]
# font
font_size = 32
# text  
text_indent = 24
text_intro_header_indent = 84
text_intro_footer_indent = 38
text_end_header_indent = 30
text_end_footer_indent = 26
text_stats_header_indent = 10
text_entity_footer_indent = 6
text_option_indent = 20
# menu
cursor_width = 28
cursor_height = 32
cursor_radius = 8
# screen
display_width = 512
display_height = 256
# palette
gamepalette = [25, 255, 160]
uipalette = [255, 25, 217]
entitypalette = [25, 140, 255]
mobpalette = [170, 0, 255]
itempalette = [255, 255, 0]
# hud
front_entity_width = 212
front_entity_height = 84
left_entity_width = 124
left_entity_height = 84
right_entity_width = 300
right_entity_height = 84
text_header_height = 20
text_footer_height = 196
text_option_height = 24
hud_scale = 2
vector_scale = 8
map_width = 24
map_height = 106
compass_width = 453
compass_height = 128
#compass_bearing_list = [{'width_offset': -30, 'height_offset': -7, 'angle': 90},
#                        {'width_offset': -7, 'height_offset': -35, 'angle': 0},
#                        {'width_offset': 0, 'height_offset': -7, 'angle': 270},
#                        {'width_offset': -7, 'height_offset': -7, 'angle': 180}]
left_dice_width = 412
right_dice_width = 480
player_dice_height = 60
mob_dice_height = 156

[tool.poetry]
name = "src"
version = "0.1.0"
description = "a minimalist dungeon crawler"
authors = ["AntoniaLivia79 <antoniablanchflower@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
pygame = "^2.5.2"
numpy = "^1.26.4"
maison = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
